--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
         font-size: 1rem;
         text-align: center;
         z-index: 2;
+        line-height: 1.3;
       }
       .btn {
         border: none;
         outline: none;
-        background-color: green;
+        background-color: rgb(5, 90, 5);
         color: #ffffff;
         padding: 10px;
         font-weight: 600;
@@ -63,12 +64,30 @@
         letter-spacing: 1px;
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         z-index: 2;
+        -webkit-tap-highlight-color: transparent;
       }
       .btn:hover,
-      .btn:active {
+      .btn:focus {
         padding: 10px 20px;
         border-radius: 20px;
         background-color: rgb(1, 165, 1);
+        outline: none;
+      }
+      .btn:active {
+        padding: 10px 20px;
+        border-radius: 20px;
+        background-color: rgb(4, 1, 165);
+        outline: none;
+      }
+      .initiate-trans {
+        color: rgb(1, 107, 45);
+        font-weight: 600;
+        text-decoration: underline;
+        text-transform: capitalize;
+        text-decoration-color: rgba(255, 2, 2, 1);
+        text-underline-offset: 3px;
+        text-decoration-thickness: 2px;
+        cursor: pointer;
       }
     </style>
   </head>
@@ -77,7 +96,9 @@
       <div class="bg-text"></div>
       <h1>JavaScript First Task</h1>
       <p class="instruction">
-        Kindly click the initiate transaction button to initiate a transaction.
+        Kindly click the
+        <span class="initiate-trans">initiate transaction</span> button to
+        initiate a transaction.
       </p>
       <button class="btn">Initiate Transaction</button>
     </div>
