bank-transfer-process

--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
         z-index: 2;
         -webkit-tap-highlight-color: transparent;
       }
-      .btn:hover,
-      .btn:focus {
+      .btn:hover {
         padding: 10px 20px;
         border-radius: 20px;
         background-color: rgb(1, 165, 1);
         outline: none;
       }
-      .btn:active {
+      .btn:active,
+      .btn:focus {
         padding: 10px 20px;
         border-radius: 20px;
         background-color: rgb(4, 1, 165);
